styles.css
@font-face {
    font-family: 'digital-7-italic';
    src: url(digital-7\ \(mono\ italic\).ttf);
}
@font-face {
    font-family: 'public-sans';
    src: url(PublicSans-VariableFont_wght.ttf);
}


body, html {
    height: 100%;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
}

#calculatorBody {
    /* width: 69%;
    height: 60%; */
    width: 390px;
    height: 660px;
    background-color: rgb(9, 84, 151); 
    /* color from color picker */
    /* padding: 24px 20px 70px 20px; */
    /* EXTREMELY IMPORTANT PADDING */
    display: flex;
    flex-direction: column;
    border-width: 4px;
    border-style: solid;
    border-color: rgb(7, 66, 117);

    border-radius: 10px 10px 40px 40px;

    box-shadow: -3px 3px 10px 10px rgb(124, 124, 124);
}

#boxAroundScreen {
    /* list-style: none; */
    display: flex;
    justify-content: center;
    align-items: center;
}

.boxBumps {
    margin: 0px;
    padding: 0px;
    height: 76px;
    width: 40px;
    flex-shrink: 0;
    border-radius: 5px;

}

#calculatorScreen {
    height: 50px;
    width: 323.6px;
    /* EXTREMELY IMPORTANT WIDTH */
    font-size: 70px;
    font-family: 'digital-7-italic';
    
    display: flex;
    flex-shrink: 0;
    
    background-color:rgb(159, 194, 194);
    justify-content: flex-end;
    
    /* margin: 8px 25px 14px 25px; */
    /* EXTREMELY IMPORTANT MARGIN */

    margin: 12px;
    /* Left and right so boxes stay away and leave 
    room for shadow */

    padding: 1px 6px 1px 6px;

    border-radius: 6px;
    border-style: solid;
    border-width: 3px;
    border-color:rgb(140, 170, 170);

    color: rgb(0, 0, 0);

    line-height: 0.75;

    letter-spacing: -2.7px;

}

#calculatorButtonContainer {
    display: flex;
    /* justify-content: space-between; */
    flex: auto;
    padding: 16px 10px;
    border-width: 4px;
    border-color: grey;
    border-radius: 12px;
    border-style: groove;
}

/* buttons */
/* #calculatorButtonContainer>*{
    font-size: 32px;
    border-width: 4px;
    border-style: solid;
    flex: 20%;
    margin: 1px;

    display: flex;
    justify-content: center;
    align-items: center;
} */

.normalButtons {
    display: flex;

    flex-wrap: wrap;
    
    width: 251px;
    height: 400px;

    gap: 14.8px 12px;
}

.normalButtons>*{
    font-size: 26px;
    display: flex;
    /* justify-content: center;
    align-items: center; */
    /* width: 20px;
    height: 20px; */
    /* margin: 10px; */
    background: purple;

    /* margin-right: 10px; */

    width: 64px;
    height: 50px;
}

.operatorButtons {
    display: flex;
    flex-direction: column;
    /* flex-wrap: wrap; */
    /* flex-grow: 0; */
    justify-content: space-between;
    margin-left: auto;

    width: 75.43px;
    height: 400px;
}

.operatorButtons>*{
    font-size: 26px;
    display: flex;
    /* justify-content: center;
    align-items: center; */
    /* width: 20px;
    height: 20px; */
    /* margin: 10px; */
    background: purple;

    width: 64px;
    height: 50px;
}

#Enter {
    height: 120px;
}

#commandInfo {
    margin-top: 30px;
}

#companyAndSolar {
    font-size: 28px;
    font-weight: 100;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    /* font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
    color: rgb(224, 224, 224);
    display: flex;
    flex-direction: column;
    margin: 0px;
}

p {
    margin: 10px 0px 0px 0px;
}

ul {
    margin: 0px;
    margin-top: 10px;
    padding: 0px;
    list-style-type: none;
    display: flex;
}

li {
    background-color: rgba(29, 29, 29, 0.952);
    width: 45px;
    height: 55px;
    border-width: 3px;
    border-style: solid;
    border-color: rgb(20, 20, 20);
}

#companyName {
    letter-spacing: -3px;
    /* Public */
    font-family: 'public-sans';
    font-weight: 200;
    font-size: 30px;
    font-stretch: expanded;
    margin-top: 5px;
}

#modelName {
    color: white;;
    font-size: 46px;
    font-weight: 1000;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    display: flex;
    font-family: sans-serif;
    flex-direction:row;
    margin-top: 2px;
}

#extraInfo {
    display: flex;
    justify-content: space-between;
    padding-bottom: 10px;
    margin-bottom: 25px;
    border-bottom: 4px;
    border-color: grey;
    border-bottom-style:groove;
}


.number,
.whiteButton {
    background-color: white;
    color:darkblue;

    border-color: rgb(48, 48, 48);
    border-width: 3px;
    border-style: solid;
}

.operator,
.redButton {
    background-color: rgb(230, 22, 22);
    color: white;

    border-color: rgb(77, 1, 1);
    border-width: 3px;
    border-style: solid;

}

.number,
.whiteButton,
.operator,
.redButton {
    border-radius: 8px;
    padding-left: 7px;

    box-shadow: -3px 3px 10px 4px rgb(59, 59, 59);

    

    
    /* border-style: solid; */
}

